--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         </section>
         </div>
     </main>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 
 </html>
